More layout issues. (cringe)

--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,4 @@
 @tailwind utilities;
 
 #root {
-  min-width: 100vw;
 }
